@@ -165,7 +165,7 @@ public class MergeController {
                     List<PDField> fieldsToRemove =
                             acroForm.getFields().stream()
                                     .filter(field -> field instanceof PDSignatureField)
-                                    .collect(Collectors.toList());
+                                    .toList();
 
                     if (!fieldsToRemove.isEmpty()) {
                         acroForm.flatten(
