@@ -65,7 +65,7 @@ public class GeneralWebController {
                 List<Path> jsonFiles =
                         paths.filter(Files::isRegularFile)
                                 .filter(p -> p.toString().endsWith(".json"))
-                                .collect(Collectors.toList());
+                                .toList();
                 for (Path jsonFile : jsonFiles) {
                     String content = Files.readString(jsonFile, StandardCharsets.UTF_8);
                     pipelineConfigs.add(content);
@@ -261,7 +261,7 @@ public class GeneralWebController {
                                 }
                             })
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception e) {
             throw new RuntimeException("Failed to read font directory from " + locationPattern, e);
         }
