@@ -287,7 +287,7 @@ public class MetricsController {
         return counts.entrySet().stream()
                 .map(entry -> new EndpointCount(entry.getKey(), entry.getValue()))
                 .sorted(Comparator.comparing(EndpointCount::getCount).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private double getUniqueUserCount(String method, Optional<String> endpoint) {
@@ -349,7 +349,7 @@ public class MetricsController {
         return uniqueUsers.entrySet().stream()
                 .map(entry -> new EndpointCount(entry.getKey(), entry.getValue().size()))
                 .sorted(Comparator.comparing(EndpointCount::getCount).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/uptime")
